tests/cases/compiler-development/artifact/errors/diagnostic-generic-aggregate-use-after-move.diagnostic
diagnostic error code=O0001 family=ownership message="cannot use moved owned field 'value.0'" sources=1 labels=1 notes=0 helps=0
  Source source_id=0 kind=file path="tests/cases/generics/errors/generic-aggregate-use-after-move.ari" display="tests/cases/generics/errors/generic-aggregate-use-after-move.ari" bytes=264
  Label index=0 role=primary source_id=0 source="tests/cases/generics/errors/generic-aggregate-use-after-move.ari" line=12 column=22 end_line=12 end_column=27 byte_start=214 byte_end=219 message=""
  Snippet label=0 text="  --> tests/cases/generics/errors/generic-aggregate-use-after-move.ari:12:22\n    |\n 12 |   let second = value.value;\n    |                      ^^^^^"
